--- a/USTHWeather/app/src/main/res/layout/fragment_forecast.xml
+++ b/USTHWeather/app/src/main/res/layout/fragment_forecast.xml
@@ -1,14 +1,227 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ForecastFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+<!--    <TextView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:text="something" />-->
+    <LinearLayout
+        android:layout_width="950px"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:id="@+id/weather_container"
+        android:layout_marginLeft="65px"
+        android:layout_marginTop="500px"
+        android:background="#e6e6fa">
 
-</FrameLayout>
+        <LinearLayout
+            android:id="@+id/item1"
+            android:layout_width="950px"
+            android:layout_height="150px"
+            android:orientation="horizontal"
+            android:padding="4px">
+
+            <TextView
+                android:layout_width="180px"
+                android:layout_height="match_parent"
+                android:paddingLeft="8px"
+                android:paddingRight="8px"
+                android:text="MON"
+                android:gravity="center"/>
+
+            <View
+                android:layout_width="150px"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="8px"
+                android:layout_marginRight="8px"
+                android:background="@drawable/clouds" />
+            <TextView
+                android:layout_width="109dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:paddingLeft="16px"
+                android:paddingRight="16px"
+                android:text="Cloudy\n24 - 28 C"
+                android:gravity="center_vertical"/>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/item2"
+            android:layout_width="950px"
+            android:layout_height="150px"
+            android:orientation="horizontal"
+            android:padding="4px">
+            <TextView
+                android:layout_width="180px"
+                android:layout_height="match_parent"
+                android:paddingLeft="8px"
+                android:paddingRight="8px"
+                android:text="TUE"
+                android:gravity="center"/>
+            <View
+                android:layout_width="150px"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="8px"
+                android:layout_marginRight="8px"
+                android:background="@drawable/clear" />
+            <TextView
+                android:layout_width="109dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:paddingLeft="16px"
+                android:paddingRight="16px"
+                android:text="Cloudy\n24 - 28 C"
+                android:gravity="center_vertical"/>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/item3"
+            android:layout_width="950px"
+            android:layout_height="150px"
+            android:orientation="horizontal"
+            android:padding="4px">
+            <TextView
+                android:layout_width="180px"
+                android:layout_height="match_parent"
+                android:paddingLeft="8px"
+                android:paddingRight="8px"
+                android:text="WED"
+                android:gravity="center"/>
+            <View
+                android:layout_width="150px"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="8px"
+                android:layout_marginRight="8px"
+                android:background="@drawable/drizzle" />
+            <TextView
+                android:layout_width="109dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:paddingLeft="16px"
+                android:paddingRight="16px"
+                android:text="Cloudy\n24 - 28 C"
+                android:gravity="center_vertical"/>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/item4"
+            android:layout_width="950px"
+            android:layout_height="150px"
+            android:orientation="horizontal"
+            android:padding="4px">
+            <TextView
+                android:layout_width="180px"
+                android:layout_height="match_parent"
+                android:paddingLeft="8px"
+                android:paddingRight="8px"
+                android:text="THU"
+                android:gravity="center"/>
+            <View
+                android:layout_width="150px"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="8px"
+                android:layout_marginRight="8px"
+                android:background="@drawable/clear" />
+            <TextView
+                android:layout_width="109dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:paddingLeft="16px"
+                android:paddingRight="16px"
+                android:text="Cloudy\n24 - 28 C"
+                android:gravity="center_vertical"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/item4"
+            android:layout_width="950px"
+            android:layout_height="150px"
+            android:orientation="horizontal"
+            android:padding="4px">
+            <TextView
+                android:layout_width="180px"
+                android:layout_height="match_parent"
+                android:paddingLeft="8px"
+                android:paddingRight="8px"
+                android:text="FRI"
+                android:gravity="center"/>
+            <View
+                android:layout_width="150px"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="8px"
+                android:layout_marginRight="8px"
+                android:background="@drawable/clear" />
+            <TextView
+                android:layout_width="109dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:paddingLeft="16px"
+                android:paddingRight="16px"
+                android:text="Cloudy\n24 - 28 C"
+                android:gravity="center_vertical"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/item4"
+            android:layout_width="950px"
+            android:layout_height="150px"
+            android:orientation="horizontal"
+            android:padding="4px">
+            <TextView
+                android:layout_width="180px"
+                android:layout_height="match_parent"
+                android:paddingLeft="8px"
+                android:paddingRight="8px"
+                android:text="SAT"
+                android:gravity="center"/>
+            <View
+                android:layout_width="150px"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="8px"
+                android:layout_marginRight="8px"
+                android:background="@drawable/clear" />
+            <TextView
+                android:layout_width="109dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:paddingLeft="16px"
+                android:paddingRight="16px"
+                android:text="Cloudy\n24 - 28 C"
+                android:gravity="center_vertical"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/item4"
+            android:layout_width="950px"
+            android:layout_height="150px"
+            android:orientation="horizontal"
+            android:padding="4px">
+            <TextView
+                android:layout_width="180px"
+                android:layout_height="match_parent"
+                android:paddingLeft="8px"
+                android:paddingRight="8px"
+                android:text="SUN"
+                android:gravity="center"/>
+            <View
+                android:layout_width="150px"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="8px"
+                android:layout_marginRight="8px"
+                android:background="@drawable/clear" />
+            <TextView
+                android:layout_width="109dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:paddingLeft="16px"
+                android:paddingRight="16px"
+                android:text="Cloudy\n24 - 28 C"
+                android:gravity="center_vertical"/>
+        </LinearLayout>
+
+    </LinearLayout>
+
+</LinearLayout>
