--- a/USTHWeather/app/src/main/res/layout/activity_main.xml
+++ b/USTHWeather/app/src/main/res/layout/activity_main.xml
@@ -5,16 +5,32 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".WeatherActivity">
+    tools:context=".WeatherActivity"
+    android:background="#20FF0000"
+    android:orientation="vertical">
 
-    <TextView
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:orientation="vertical">
+        <fragment
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id= "@+id/weatherFragment"
+            android:name="vn.edu.usth.weather.WeatherFragment" />
+
+        <fragment
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/forecast"
+            android:name="vn.edu.usth.weather.ForecastFragment" />
+    </LinearLayout>
+
+        
+
+        
+
+
 
 
 
