--- a/USTHWeather/app/src/main/res/values/colors.xml
+++ b/USTHWeather/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="weather_color">#DBFBDB</color>
+    <color name="forecast_color">#e6e6fa</color>
 </resources>
