--- a/USTHWeather/app/src/main/res/layout/fragment_weather_and_forecast.xml
+++ b/USTHWeather/app/src/main/res/layout/fragment_weather_and_forecast.xml
@@ -12,6 +12,7 @@
         android:orientation="vertical"
         android:layout_marginTop="150px">
         <fragment
+            android:layout_marginBottom="15dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id= "@+id/weatherFragment"
