--- a/USTHWeather/app/src/main/res/layout/activity_main.xml
+++ b/USTHWeather/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,11 @@
 <!--            android:id="@+id/forecast"-->
 <!--            android:name="vn.edu.usth.weather.ForecastFragment" />-->
 <!--    </LinearLayout>-->
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/forecast_color"/>
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab_layout"
